; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vnops.c_nfs3_getattr_rpc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vnops.c_nfs3_getattr_rpc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_vattr = type { i32 }
%struct.nfsmount = type { i32 }
%struct.nfsm_chain = type { i32 }

@ENXIO = common dso_local global i32 0, align 4
@NGA_MONITOR = common dso_local global i32 0, align 4
@R_RECOVER = common dso_local global i32 0, align 4
@NGA_SOFT = common dso_local global i32 0, align 4
@R_SOFT = common dso_local global i32 0, align 4
@NFS_VER2 = common dso_local global i32 0, align 4
@NFSPROC_GETATTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs3_getattr_rpc(i32 %0, i64 %1, i32* %2, i64 %3, i32 %4, i32 %5, %struct.nfs_vattr* %6, i32* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.nfs_vattr*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca %struct.nfsmount*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca %struct.nfsm_chain, align 4
  %24 = alloca %struct.nfsm_chain, align 4
  store i32 %0, i32* %10, align 4
  store i64 %1, i64* %11, align 8
  store i32* %2, i32** %12, align 8
  store i64 %3, i64* %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store %struct.nfs_vattr* %6, %struct.nfs_vattr** %16, align 8
  store i32* %7, i32** %17, align 8
  %25 = load i64, i64* %11, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %8
  %28 = load i64, i64* %11, align 8
  %29 = call %struct.nfsmount* @VFSTONFS(i64 %28)
  br label %33

30:                                               ; preds = %8
  %31 = load i32, i32* %10, align 4
  %32 = call %struct.nfsmount* @NFSTONMP(i32 %31)
  br label %33

33:                                               ; preds = %30, %27
  %34 = phi %struct.nfsmount* [ %29, %27 ], [ %32, %30 ]
  store %struct.nfsmount* %34, %struct.nfsmount** %18, align 8
  store i32 0, i32* %19, align 4
  store i32 0, i32* %22, align 4
  %35 = load %struct.nfsmount*, %struct.nfsmount** %18, align 8
  %36 = call i64 @nfs_mount_gone(%struct.nfsmount* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %33
  %39 = load i32, i32* @ENXIO, align 4
  store i32 %39, i32* %9, align 4
  br label %106

40:                                               ; preds = %33
  %41 = load %struct.nfsmount*, %struct.nfsmount** %18, align 8
  %42 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  store i32 %43, i32* %21, align 4
  %44 = load i32, i32* %14, align 4
  %45 = load i32, i32* @NGA_MONITOR, align 4
  %46 = and i32 %44, %45
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %40
  %49 = load i32, i32* @R_RECOVER, align 4
  store i32 %49, i32* %22, align 4
  br label %50

50:                                               ; preds = %48, %40
  %51 = load i32, i32* %14, align 4
  %52 = load i32, i32* @NGA_SOFT, align 4
  %53 = and i32 %51, %52
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %59

55:                                               ; preds = %50
  %56 = load i32, i32* @R_SOFT, align 4
  %57 = load i32, i32* %22, align 4
  %58 = or i32 %57, %56
  store i32 %58, i32* %22, align 4
  br label %59

59:                                               ; preds = %55, %50
  %60 = call i32 @nfsm_chain_null(%struct.nfsm_chain* %23)
  %61 = call i32 @nfsm_chain_null(%struct.nfsm_chain* %24)
  %62 = load i32, i32* %19, align 4
  %63 = load i32, i32* %21, align 4
  %64 = call i32 @NFSX_FH(i32 %63)
  %65 = call i32 @nfsm_chain_build_alloc_init(i32 %62, %struct.nfsm_chain* %23, i32 %64)
  %66 = load i32, i32* %21, align 4
  %67 = load i32, i32* @NFS_VER2, align 4
  %68 = icmp ne i32 %66, %67
  br i1 %68, label %69, label %73

69:                                               ; preds = %59
  %70 = load i32, i32* %19, align 4
  %71 = load i64, i64* %13, align 8
  %72 = call i32 @nfsm_chain_add_32(i32 %70, %struct.nfsm_chain* %23, i64 %71)
  br label %73

73:                                               ; preds = %69, %59
  %74 = load i32, i32* %19, align 4
  %75 = load i32*, i32** %12, align 8
  %76 = load i64, i64* %13, align 8
  %77 = call i32 @nfsm_chain_add_opaque(i32 %74, %struct.nfsm_chain* %23, i32* %75, i64 %76)
  %78 = load i32, i32* %19, align 4
  %79 = call i32 @nfsm_chain_build_done(i32 %78, %struct.nfsm_chain* %23)
  %80 = load i32, i32* %19, align 4
  %81 = call i32 @nfsmout_if(i32 %80)
  %82 = load i32, i32* %10, align 4
  %83 = load i64, i64* %11, align 8
  %84 = load i32, i32* @NFSPROC_GETATTR, align 4
  %85 = load i32, i32* %15, align 4
  %86 = call i32 @vfs_context_thread(i32 %85)
  %87 = load i32, i32* %15, align 4
  %88 = call i32 @vfs_context_ucred(i32 %87)
  %89 = load i32, i32* %22, align 4
  %90 = load i32*, i32** %17, align 8
  %91 = call i32 @nfs_request2(i32 %82, i64 %83, %struct.nfsm_chain* %23, i32 %84, i32 %86, i32 %88, i32* null, i32 %89, %struct.nfsm_chain* %24, i32* %90, i32* %20)
  store i32 %91, i32* %19, align 4
  %92 = load i32, i32* %19, align 4
  %93 = icmp ne i32 %92, 0
  br i1 %93, label %96, label %94

94:                                               ; preds = %73
  %95 = load i32, i32* %20, align 4
  store i32 %95, i32* %19, align 4
  br label %96

96:                                               ; preds = %94, %73
  %97 = load i32, i32* %19, align 4
  %98 = call i32 @nfsmout_if(i32 %97)
  %99 = load i32, i32* %21, align 4
  %100 = load %struct.nfs_vattr*, %struct.nfs_vattr** %16, align 8
  %101 = call i32 @nfs_parsefattr(%struct.nfsm_chain* %24, i32 %99, %struct.nfs_vattr* %100)
  store i32 %101, i32* %19, align 4
  br label %102

102:                                              ; preds = %96
  %103 = call i32 @nfsm_chain_cleanup(%struct.nfsm_chain* %23)
  %104 = call i32 @nfsm_chain_cleanup(%struct.nfsm_chain* %24)
  %105 = load i32, i32* %19, align 4
  store i32 %105, i32* %9, align 4
  br label %106

106:                                              ; preds = %102, %38
  %107 = load i32, i32* %9, align 4
  ret i32 %107
}

declare dso_local %struct.nfsmount* @VFSTONFS(i64) #1

declare dso_local %struct.nfsmount* @NFSTONMP(i32) #1

declare dso_local i64 @nfs_mount_gone(%struct.nfsmount*) #1

declare dso_local i32 @nfsm_chain_null(%struct.nfsm_chain*) #1

declare dso_local i32 @nfsm_chain_build_alloc_init(i32, %struct.nfsm_chain*, i32) #1

declare dso_local i32 @NFSX_FH(i32) #1

declare dso_local i32 @nfsm_chain_add_32(i32, %struct.nfsm_chain*, i64) #1

declare dso_local i32 @nfsm_chain_add_opaque(i32, %struct.nfsm_chain*, i32*, i64) #1

declare dso_local i32 @nfsm_chain_build_done(i32, %struct.nfsm_chain*) #1

declare dso_local i32 @nfsmout_if(i32) #1

declare dso_local i32 @nfs_request2(i32, i64, %struct.nfsm_chain*, i32, i32, i32, i32*, i32, %struct.nfsm_chain*, i32*, i32*) #1

declare dso_local i32 @vfs_context_thread(i32) #1

declare dso_local i32 @vfs_context_ucred(i32) #1

declare dso_local i32 @nfs_parsefattr(%struct.nfsm_chain*, i32, %struct.nfs_vattr*) #1

declare dso_local i32 @nfsm_chain_cleanup(%struct.nfsm_chain*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
